objects/QualificationCaregiver__c.object
<CustomObject>
    <label>Qualifikation Pfleger</label>
    <nameField>
        <label>Qualification Caregiver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifikationen Pfleger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Substitute Caregiver, Placement Caregiver, Recruitment Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Qualifications Caregiver</relationshipLabel>
        <relationshipName>Qualifications_Caregiver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaregiverJobs__c</fullName>
        <label>Ⓜ️ Caregiver Jobs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaregiverJobsMapped__c</fullName>
        <formula>IF( ISPICKVAL(CaregiverJobs__c, &quot;Gesundheits-und Krankenpfleger/in&quot;), &quot;GuK&quot;, 
IF( ISPICKVAL(CaregiverJobs__c, &quot;Gesundheits- und Kinderkrankenpfleger/in&quot;), &quot;GuKinderK&quot;, 
IF( ISPICKVAL(CaregiverJobs__c, &quot;Gesundheits- und Pflegeassistent/in (Pflegehelfer/in)&quot;), &quot;Gu Pflegeassistent (PH)&quot;, 
IF( ISPICKVAL(CaregiverJobs__c, &quot;Medizinische Fachangestellte/r (Arzthelfer/in)&quot;), &quot;Med. Fachangestellte/r (AH)&quot;, 
IF( ISPICKVAL(CaregiverJobs__c, &quot;Hebamme/Entbindungspfleger&quot;), &quot;Heb/Entbindungspfleger&quot;, 
TEXT(CaregiverJobs__c ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] CaregiverJobsMapped</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaregiverFurtherEducation__c</fullName>
        <label>Ⓜ️ Caregiver Further Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ITS/Anästhesie </fullName>
                </value>
                <value>
                    <fullName>KinderITS (Neonatologie Level 1-3)/Kinderanästhesie</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>Ambulanzdienst/Notfallmedizin</fullName>
                </value>
                <value>
                    <fullName>Endoskopie &amp; Herzkatheterlabor</fullName>
                </value>
                <value>
                    <fullName>Kardiotechnik</fullName>
                </value>
                <value>
                    <fullName>Onkologie/Palliativmedizin/Hospizpflege</fullName>
                </value>
                <value>
                    <fullName>Nephrologie/Dialyse</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation und Langzeitpflege</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Study Nurse</fullName>
                </value>
                <value>
                    <fullName>Psychiatrie</fullName>
                </value>
                <value>
                    <fullName>Gerontopsychiatrie </fullName>
                </value>
                <value>
                    <fullName>Geriatrie</fullName>
                </value>
                <value>
                    <fullName>Außerklinische Beatmung</fullName>
                </value>
                <value>
                    <fullName>Fachkunde 1 &amp; 2 (Sterilisation)</fullName>
                </value>
                <value>
                    <fullName>Pflegedienstleitung</fullName>
                </value>
                <value>
                    <fullName>Stationsleitung</fullName>
                </value>
                <value>
                    <fullName>Wohnbereichsleitung</fullName>
                </value>
                <value>
                    <fullName>Stroke Unit</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Hebamme/Entbindungspfleger/In</fullName>
                </value>
                <value>
                    <fullName>Strahlenschutz</fullName>
                </value>
                <value>
                    <fullName>Studium im Gesundheitswesen</fullName>
                </value>
                <value>
                    <fullName>Studium in der Pflege</fullName>
                </value>
                <value>
                    <fullName>Qualitätsmanagement</fullName>
                </value>
                <value>
                    <fullName>Weaning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaregiverFurtherEducation__c</fullName>
        <formula>&quot;None;&quot; +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;ITS/Anästhesie &quot;), &quot;ITS/Anästhesie;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie&quot;), &quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;OP&quot;), &quot;OP;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Ambulanzdienst/Notfallmedizin&quot;), &quot;Ambulanzdienst/Notfallmedizin;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Endoskopie &amp; Herzkatheterlabor&quot;), &quot;Endoskopie &amp; Herzkatheterlabor;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Kardiotechnik&quot;), &quot;Kardiotechnik;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Onkologie/Palliativmedizin/Hospizpflege&quot;), &quot;Onkologie/Palliativmedizin/Hospizpflege;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Nephrologie/Dialyse&quot;), &quot;Nephrologie/Dialyse;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Rehabilitation und Langzeitpflege&quot;), &quot;Rehabilitation und Langzeitpflege;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Hygiene&quot;), &quot;Hygiene;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Study Nurse&quot;), &quot;Study Nurse;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Psychiatrie&quot;), &quot;Psychiatrie;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Gerontopsychiatrie&quot;), &quot;Gerontopsychiatrie;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Geriatrie&quot;), &quot;Geriatrie;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Außerklinische Beatmung&quot;), &quot;Außerklinische Beatmung;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Fachkunde 1 &amp; 2 (Sterilisation)&quot;), &quot;Fachkunde 1 &amp; 2 (Sterilisation);&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Pflegedienstleitung&quot;), &quot;Pflegedienstleitung;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Stationsleitung&quot;), &quot;Stationsleitung;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Wohnbereichsleitung&quot;), &quot;Wohnbereichsleitung;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Stoke Unit&quot;), &quot;Stoke Unit;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;IMC&quot;), &quot;IMC;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Hebamme/Entbindungspfleger/In&quot;), &quot;Hebamme/Entbindungspfleger/In;&quot;, NULL)  +
IF(INCLUDES(CaregiverFurtherEducation__c, &quot;Strahlenschutz&quot;), &quot;Strahlenschutz;&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Caregiver Further Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaregiverPracticalExperience__c</fullName>
        <label>Ⓜ️ Caregiver Practical Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ITS/Anästhesie </fullName>
                </value>
                <value>
                    <fullName>KinderITS (Neonatologie Level 1-3)/Kinderanästhesie</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>Ambulanzdienst/Notfallmedizin</fullName>
                </value>
                <value>
                    <fullName>Endoskopie &amp; Herzkatheterlabor</fullName>
                </value>
                <value>
                    <fullName>Kardiotechnik</fullName>
                </value>
                <value>
                    <fullName>Onkologie/Palliativmedizin/Hospizpflege</fullName>
                </value>
                <value>
                    <fullName>Nephrologie/Dialyse</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation und Langzeitpflege</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Study Nurse</fullName>
                </value>
                <value>
                    <fullName>Psychiatrie</fullName>
                </value>
                <value>
                    <fullName>Gerontopsychiatrie </fullName>
                </value>
                <value>
                    <fullName>Geriatrie</fullName>
                </value>
                <value>
                    <fullName>Außerklinische Beatmung</fullName>
                </value>
                <value>
                    <fullName>Fachkunde 1 &amp; 2 (Sterilisation)</fullName>
                </value>
                <value>
                    <fullName>Pflegedienstleitung</fullName>
                </value>
                <value>
                    <fullName>Stationsleitung</fullName>
                </value>
                <value>
                    <fullName>Wohnbereichsleitung</fullName>
                </value>
                <value>
                    <fullName>Stroke Unit</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Hebamme/Entbindungspfleger/In</fullName>
                </value>
                <value>
                    <fullName>Strahlenschutz</fullName>
                </value>
                <value>
                    <fullName>Weaning</fullName>
                </value>
                <value>
                    <fullName>Studium im Gesundheitswesen</fullName>
                </value>
                <value>
                    <fullName>Studium in der Pflege</fullName>
                </value>
                <value>
                    <fullName>Qualitätsmanagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaregiverPracticalExperience__c</fullName>
        <formula>&quot;None;&quot; +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;ITS/Anästhesie &quot;), &quot;ITS/Anästhesie;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie&quot;), &quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;OP&quot;), &quot;OP;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Ambulanzdienst/Notfallmedizin&quot;), &quot;Ambulanzdienst/Notfallmedizin;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Endoskopie &amp; Herzkatheterlabor&quot;), &quot;Endoskopie &amp; Herzkatheterlabor;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Kardiotechnik&quot;), &quot;Kardiotechnik;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Onkologie/Palliativmedizin/Hospizpflege&quot;), &quot;Onkologie/Palliativmedizin/Hospizpflege;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Nephrologie/Dialyse&quot;), &quot;Nephrologie/Dialyse;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Rehabilitation und Langzeitpflege&quot;), &quot;Rehabilitation und Langzeitpflege;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Hygiene&quot;), &quot;Hygiene;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Study Nurse&quot;), &quot;Study Nurse;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Psychiatrie&quot;), &quot;Psychiatrie;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Gerontopsychiatrie &quot;), &quot;Gerontopsychiatrie;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Geriatrie&quot;), &quot;Geriatrie;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Außerklinische Beatmung&quot;), &quot;Außerklinische Beatmung;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Fachkunde 1 &amp; 2 (Sterilisation)&quot;), &quot;Fachkunde 1 &amp; 2 (Sterilisation);&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Pflegedienstleitung&quot;), &quot;Pflegedienstleitung;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Stationsleitung&quot;), &quot;Stationsleitung;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Wohnbereichsleitung&quot;), &quot;Wohnbereichsleitung;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Stoke Unit&quot;), &quot;Stoke Unit;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;IMC&quot;), &quot;IMC;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Hebamme/Entbindungspfleger/In&quot;), &quot;Hebamme/Entbindungspfleger/In;&quot;, NULL)  +
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Strahlenschutz&quot;), &quot;Strahlenschutz;&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Caregiver Practical Experience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Count_for_Opportunity_rollup__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is used for the dlrs and opportunity automatic naming process.
Robin S. 20.02.2019</description>
        <label>[T] Count for Opportunity rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Only_one_QualifcationCaregiver_per_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; Isnew() &amp;&amp; 
Opportunity__r.T_Number_of_Qualification_Caregiver__c &gt; 2</errorConditionFormula>
        <errorMessage>You may not deposit more than three Caregiver Qualification per opportunity. If you would like to add another caregiver qualification, please create another opportunity</errorMessage>
    </validationRules>
</CustomObject>